feat: improve modules translation

--- a/src/m_gpg_info/CMakeLists.txt
+++ b/src/m_gpg_info/CMakeLists.txt
@@ -31,7 +31,7 @@ aux_source_directory(. INTEGRATED_MODULE_SOURCE)
 add_library(mod_gpg_info SHARED ${INTEGRATED_MODULE_SOURCE})
 
 # install dir
-install(TARGETS mod_gpg_info 
+install(TARGETS mod_gpg_info
   LIBRARY DESTINATION "${CMAKE_INSTALL_PREFIX}/modules")
 
 # link sdk
@@ -51,12 +51,14 @@ target_compile_features(mod_gpg_info PRIVATE cxx_std_17)
 
 # i18n
 set(LOCALE_TS_PATH ${CMAKE_CURRENT_SOURCE_DIR}/ts)
-set(TS_FILES "${LOCALE_TS_PATH}/ModuleGnuPGInfoGathering.en_US.ts" 
-            "${LOCALE_TS_PATH}/ModuleGnuPGInfoGathering.de_DE.ts"
-            "${LOCALE_TS_PATH}/ModuleGnuPGInfoGathering.fr_FR.ts"
-            "${LOCALE_TS_PATH}/ModuleGnuPGInfoGathering.zh_CN.ts")
+set(TS_FILES "${LOCALE_TS_PATH}/ModuleGnuPGInfoGathering.en_US.ts"
+  "${LOCALE_TS_PATH}/ModuleGnuPGInfoGathering.de_DE.ts"
+  "${LOCALE_TS_PATH}/ModuleGnuPGInfoGathering.fr_FR.ts"
+  "${LOCALE_TS_PATH}/ModuleGnuPGInfoGathering.it_iT.ts"
+  "${LOCALE_TS_PATH}/ModuleGnuPGInfoGathering.zh_CN.ts"
+  "${LOCALE_TS_PATH}/ModuleGnuPGInfoGathering.zh_TW.ts")
 qt_add_translations(mod_gpg_info
-    RESOURCE_PREFIX "/i18n"
-    TS_FILES ${TS_FILES}
-    SOURCES ${MODULE_SOURCE_FILES}
-    INCLUDE_DIRECTORIES ${CMAKE_CURRENT_SOURCE_DIR})
+  RESOURCE_PREFIX "/i18n"
+  TS_FILES ${TS_FILES}
+  SOURCES ${MODULE_SOURCE_FILES}
+  INCLUDE_DIRECTORIES ${CMAKE_CURRENT_SOURCE_DIR})
