fix: disable unused features of vmime

--- a/src/m_email/CMakeLists.txt
+++ b/src/m_email/CMakeLists.txt
@@ -38,6 +38,11 @@ set(VMIME_HAVE_SASL_SUPPORT OFF CACHE BOOL "No SASL")
 set(VMIME_BUILD_DOCUMENTATION OFF CACHE BOOL "Document IS Not Necessary HERE")
 set(VMIME_BUILD_STATIC_LIBRARY ON CACHE BOOL "Need Static Library")
 set(VMIME_BUILD_SHARED_LIBRARY OFF CACHE BOOL "No Shared Library")
+set(VMIME_HAVE_MESSAGING_PROTO_POP3 OFF CACHE BOOL "No POP3 protocol")
+set(VMIME_HAVE_MESSAGING_PROTO_SMTP OFF CACHE BOOL "No SMTP protocol")
+set(VMIME_HAVE_MESSAGING_PROTO_IMAP OFF CACHE BOOL "No IMAP protocol")
+set(VMIME_HAVE_MESSAGING_PROTO_MAILDIR OFF CACHE BOOL "No Maildir protocol")
+set(VMIME_HAVE_MESSAGING_PROTO_SENDMAIL OFF CACHE BOOL "No Sendmail protocol")
 add_subdirectory(vmime "vmime" EXCLUDE_FROM_ALL)
 
 # install dir
