fix: target_link_libraries with a target   must be either all-keyword or all-plain

--- a/src/m_email/CMakeLists.txt
+++ b/src/m_email/CMakeLists.txt
@@ -46,7 +46,7 @@ set(VMIME_HAVE_MESSAGING_PROTO_SENDMAIL OFF CACHE BOOL "No Sendmail protocol")
 add_subdirectory(vmime "vmime" EXCLUDE_FROM_ALL)
 
 if(MINGW)
-  target_link_libraries(vmime-static PRIVATE ws2_32)
+  target_link_libraries(vmime-static ws2_32 mlang)
 endif()
 
 # install dir
