--- a/src/m_key_server_sync/CMakeLists.txt
+++ b/src/m_key_server_sync/CMakeLists.txt
@@ -31,10 +31,6 @@ aux_source_directory(. INTEGRATED_MODULE_SOURCE)
 # define libgpgfrontend_module
 add_library(mod_key_server_sync SHARED ${INTEGRATED_MODULE_SOURCE})
 
-# install dir
-install(TARGETS mod_key_server_sync
-  LIBRARY DESTINATION "${CMAKE_INSTALL_PREFIX}/modules")
-
 # link sdk
 target_link_libraries(mod_key_server_sync PRIVATE
   gpgfrontend_module_sdk)
@@ -44,3 +40,10 @@ target_link_libraries(mod_key_server_sync PRIVATE Qt::Core Qt::Network)
 
 # using std c++ 17
 target_compile_features(mod_key_server_sync PRIVATE cxx_std_17)
+
+# install paths
+install(TARGETS mod_key_server_sync
+  LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
+  ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
+  PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
+)
