--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,7 +29,7 @@ set(CMAKE_USER_MAKE_RULES_OVERRIDE "${CMAKE_SOURCE_DIR}/cmake/FlagsOverrides.cma
 
 # define project
 project(GpgFrontendModules
-  VERSION 2.1.8
+  VERSION ${CMAKE_PROJECT_VERSION}
   DESCRIPTION "Modules of GpgFrontend"
   HOMEPAGE_URL "https://gpgfrontend.bktus.com"
   LANGUAGES CXX)
