feat(ver_check): add bktus version check support
- implement BKTUSVersionCheckTask for bktus.com version checking
- refactor version checking logic into Utils.cpp
- update version checking module to support multiple sources
- improve version status display messages

--- a/src/m_ver_check/CMakeLists.txt
+++ b/src/m_ver_check/CMakeLists.txt
@@ -32,7 +32,7 @@ aux_source_directory(. INTEGRATED_MODULE_SOURCE)
 register_module(ver_check MODULE_TARGET ${INTEGRATED_MODULE_SOURCE})
 
 # link qt
-target_link_libraries(${MODULE_TARGET} PUBLIC Qt::Core Qt::Network Qt::Widgets)
+target_link_libraries(${MODULE_TARGET} PUBLIC Qt::Core Qt::Network Qt::Widgets Qt::Xml)
 
 # ui
 set(CMAKE_AUTOUIC_SEARCH_PATHS ${CMAKE_AUTOUIC_SEARCH_PATHS} ${CMAKE_CURRENT_SOURCE_DIR}/ui)
