feat(key-server): add public key search and import dialog
* Introduce UI dialog for searching and importing public keys from
  key servers using multiple search criteria (key ID, email,
  fingerprint).
* Implement backend integration for querying and importing keys from
  standard PKS-compatible servers.
* Add logic to parse, display, and import key details with status
  indicators and user feedback.
* Enhance menu integration and key operation options in the UI for
  improved usability and workflow.

Relates to user-requested feature for easier key server integration.

--- a/src/m_key_server_sync/CMakeLists.txt
+++ b/src/m_key_server_sync/CMakeLists.txt
@@ -32,4 +32,4 @@ aux_source_directory(. INTEGRATED_MODULE_SOURCE)
 register_module(key_server_sync MODULE_TARGET ${INTEGRATED_MODULE_SOURCE})
 
 # link qt
-target_link_libraries(${MODULE_TARGET} PRIVATE Qt::Core Qt::Network)
+target_link_libraries(${MODULE_TARGET} PRIVATE Qt::Core Qt::Widgets Qt::Network)
